--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "@icons-pack/react-simple-icons": "^13.8.0",
     "aos": "^3.0.0-beta.6",
     "lucide-react": "^0.552.0",
-    "next": "16.0.1",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
+    "next": "^16.1.1",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "react-simple-typewriter": "^5.0.1"
   },
   "devDependencies": {
